# Browsey

./: .gitattributes  .gitignore  .taurignore  ARCHITECTURE_IMPORTS.md  ARCHITECTURE_NAMING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  TODO-rclone-cross-boundary.md  TODO-rclone-performance.md  TODO-rclone-rc.md  TODO-rclone.md  TODO_APP_SPLIT.md  TODO_BACKEND_ERROR_API_REMAINING.md  TODO_BACKEND_ERROR_API_STANDARDIZATION.md  TODO_CLOUD_RCLONE_SPLIT.md  TODO_ENGINEERING_IMPROVEMENTS.md  TODO_ERROR_MIGRATION.md  TODO_EXPLORER_PAGE_SPLIT_PHASE2.md  TODO_IMPORT_BOUNDARIES.md  TODO_LOWLEVEL_ERROR_COORDINATION.md  TODO_NAMING_CONVENTIONS.md  TODO_SETTINGS_HIGH_CONTRAST.md  TODO_WHEEL_SCROLL_IMPROVEMENTS.md  browsey.spec  tauri.conf.example.json  tauri.conf.json
.cargo/: config.toml
.copr/: Makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: linux-bug-report.yml  quality-debt-sweep.yml
.github/workflows/: docs-pages.yml  frontend-quality.yml  rust-quality.yml
.semgrep/: typed-errors-blocking.yml  typed-errors.yml
capabilities/: default.json
docs/: ERROR_HARDENING_EXCEPTION_POLICY.md  README.md  TODO_BACKEND_ERROR_HARDENING_PHASE2.md  TODO_CORE_OPERATIONS_HARDENING.md  browsey-investor-assessment.md  core-operations-extract-gap-audit.md  core-operations-fault-injection-notes.md  core-operations-local-gap-audit.md  core-operations-matrix.md  core-operations-mixed-gap-audit.md  core-operations-release-blocking-policy.md  core-operations-release-checklist.md  index.html  nautilus-gap-strategy.md  onedrive-rclone-v1-manual-checklist.md  package-lock.json  package.json  vite.config.ts
docs-site/: README.md  eslint.config.js  package-lock.json  package.json
docs-site/src/: App.svelte
docs/quality/: lint-baseline.md
docs/src/: App.svelte  app.css
docs/strategy/: browsey-open-source-sustainability.md
docs/todo/: README.md  TODO_BACKEND_HARDENING_5_OF_6.md  TODO_BACKEND_LARGE_FILE_SPLIT.md  TODO_CLOUD_PROVIDER_SHARED_ENGINE.md  TODO_CLOUD_THUMBS_GRID.md  TODO_PRODUCTION_READY_LINUX.md  TODO_RCLONE_ONBOARDING.md
docs/todo-archive/: README.md  TODO_APP_SPLIT.md  TODO_BACKEND_ERROR_API_REMAINING.md  TODO_BACKEND_ERROR_API_STANDARDIZATION.md  TODO_BACKEND_ERROR_HARDENING_PHASE2.md  TODO_BACKEND_HARDENING_5_OF_6.md  TODO_BACKEND_LARGE_FILE_SPLIT.md  TODO_CLOUD_PROVIDER_SHARED_ENGINE.md  TODO_CLOUD_RCLONE_SPLIT.md  TODO_CLOUD_THUMBS_GRID.md  TODO_CORE_OPERATIONS_HARDENING.md  TODO_ENGINEERING_IMPROVEMENTS.md  TODO_EXPLORER_PAGE_SPLIT_PHASE2.md  TODO_IMPORT_BOUNDARIES.md  TODO_LOWLEVEL_ERROR_COORDINATION.md  TODO_NAMING_CONVENTIONS.md  TODO_RCLONE_CROSS_BOUNDARY.md  TODO_RCLONE_ONBOARDING.md  TODO_RCLONE_PERFORMANCE.md  TODO_SEARCH_AQS_LITE.md  TODO_SETTINGS_HIGH_CONTRAST.md  TODO_STATE_TS_CLEANUP.md
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: explorer-smoke.e2e.ts
frontend/scripts/: check-naming-conventions.mjs
frontend/src/: App.svelte  app.css  selection.ts
packaging/: com.browsey.desktop  com.browsey.metainfo.xml
packaging/rpm/: README.md  browsey.spec
resources/pdfium-linux-x64/: PDFiumConfig.cmake
resources/schemas/: capabilities.json
scripts/: build-frontend.bat  build-release.bat  build-release.sh  dev-server-logged.sh  dev-server.bat  dev-server.sh  docs-build.bat  docs-build.sh  docs-check.bat  docs-check.sh  docs-dev.bat  docs-dev.sh  docs-install.bat  docs-install.sh  docs-preview.bat  docs-preview.sh  install-rpm.sh  start-vite.bat  start-vite.sh  upgrade-deps.sh
scripts/dev/: dev-server-logged.sh  dev-server.bat  dev-server.sh  rclone-perf-summary.sh  start-vite.bat  start-vite.sh
scripts/docs/: docs-build.bat  docs-build.sh  docs-check.bat  docs-check.sh  docs-dev.bat  docs-dev.sh  docs-install.bat  docs-install.sh  docs-preview.bat  docs-preview.sh
scripts/install/: install-rpm.sh
scripts/maintenance/: check-backend-error-hardening-guard.sh  check-docs-consistency.sh  test-backend.sh  test-both.sh  test-frontend.sh  upgrade-deps.sh
src/: binary_resolver.rs  clipboard.rs  context_menu.rs  db.rs  entry.rs  filter.rs  fs_utils.rs  icons.rs  main.rs  runtime_lifecycle.rs  search.rs  sorting.rs  statusbar.rs  svg_options.rs  undo.rs  watcher.rs  window_decorations.rs
src/binary_resolver/: error.rs  mod.rs
src/clipboard/: clipboard_size.rs  drop_mode.rs  error.rs  mod.rs  ops.rs  tests.rs
src/commands/: about.rs  bookmarks.rs  compress.rs  console.rs  decompress.rs  fs.rs  fs_windows.rs  keymap.rs  library.rs  listing.rs  meta.rs  mod.rs  mounts.rs  open_with.rs  permissions.rs  rename.rs  search.rs  settings.rs  system_clipboard.rs  tasks.rs  thumbnails.rs
src/context_menu/: action.rs  mod.rs
src/db/: error.rs  mod.rs
src/entry/: error.rs  mod.rs
src/errors/: api_error.rs  domain.rs  mod.rs
src/fs_utils/: error.rs  mod.rs
(+519 files in other folders)
