[package]
name = "browsey"
version = "0.2.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs-next = "2"
notify = "6"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
once_cell = "1.20"
serde_json = "1.0"
sysinfo = "0.37.2"
trash = "3"
mime_guess = "2.0"
shell-words = "1.1"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_WNet"] }
walkdir = "2.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
rayon = "1.10"
