[package]
name = "browsey"
version = "0.2.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
dirs-next = "2.0.0"
notify = "8.2.0"
open = "5.3.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
once_cell = "1.21.3"
serde_json = "1.0.149"
sysinfo = "0.37.2"
trash = "5.2.5"
mime_guess = "2.0.5"
shell-words = "1.1.1"
walkdir = "2.5.0"
zip = { version = "7.1.0", default-features = false, features = ["deflate"] }
tar = "0.4.44"
flate2 = { version = "1.1.8", default-features = false, features = ["rust_backend"] }
bzip2 = "0.6.1"
xz2 = "0.1.7"
zstd = "0.13.3"
rayon = "1.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_WNet", "Win32_Devices_DeviceAndDriverInstallation", "Win32_System_Ioctl", "Win32_System_IO"] }
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Memory", "Win32_UI_Shell", "Win32_UI_Shell_Common"] }
winreg = "0.55.0"
