[package]
name = "browsey"
version = "0.4.4"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
dirs-next = "2.0.0"
notify = "8.2.0"
tauri-plugin-drag = "2.1.0"
open = "5.3.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
once_cell = "1.21.3"
serde_json = "1.0.149"
regex = "1.12.2"
sysinfo = "0.37.2"
trash = "5.2.5"
mime_guess = "2.0.5"
mime = "0.3"
shell-words = "1.1.1"
walkdir = "2.5.0"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
tar = "0.4.44"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
bzip2 = "0.6.1"
xz2 = "0.1.7"
zstd = "0.13.3"
sevenz-rust2 = { version = "0.20.1", default-features = false, features = ["util", "bzip2", "deflate", "lz4", "zstd", "brotli", "ppmd"] }
rayon = "1.11.0"
libc = "0.2"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "pnm", "tga", "webp", "tiff", "hdr", "dds", "exr"] }
jpeg-decoder = "0.3.1"
blake3 = "1.8.3"
num_cpus = "1.17.0"
tokio = { version = "1.49.0", default-features = false, features = ["sync", "fs", "io-util"] }
resvg = "0.46.0"
pdfium-render = "0.8.37"
which = "8.0.0"
url = "2.5.8"
rar-stream = { version = "4.0.0", default-features = false, features = ["async"] }
wait-timeout = "0.2.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_WNet", "Win32_Devices_DeviceAndDriverInstallation", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Security", "Win32_Security_Authorization"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Memory", "Win32_UI_Shell", "Win32_UI_Shell_Common"] }
winreg = "0.55.0"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.image-webp]
opt-level = 3
